[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemies/LabNPCs.png" type="Texture" id=1]
[ext_resource path="res://Enemies/LabNPCOne.gd" type="Script" id=2]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 231, 0, 33, 48 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 198, 48, 33, 48 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 231, 48, 33, 48 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 264, 48, 33, 48 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 40 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 42 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.0
height = 0.0

[sub_resource type="CircleShape2D" id=10]
radius = 82.355

[sub_resource type="CapsuleShape2D" id=12]
radius = 4.70588
height = 0.0

[node name="LabNPCOne" type="KinematicBody2D"]
scale = Vector2( 1.7, 1.7 )
collision_layer = 16
script = ExtResource( 2 )

[node name="ShadowSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
offset = Vector2( 0, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.588, 20 )
scale = Vector2( 0.45, 0.45 )
frames = SubResource( 7 )
animation = "walk"
playing = true
offset = Vector2( 1, -60 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
scale = Vector2( 1, 1.2 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, -0.588235 )
shape = SubResource( 12 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]

[editable path="PlayerDetectionZone"]
[editable path="SoftCollision"]
